spacing-fixing

--- a/week02/styles02/media-query.css
+++ b/week02/styles02/media-query.css
@@ -4,7 +4,9 @@ body {
     font-style: normal;
 }
 
-header, main, footer {
+header,
+main,
+footer {
     max-width: 640px;
     margin: 1rem auto;
     border: 1px solid black;
